# shor_sphinx_theme

./: Gruntfile.js  LICENSE  README.md  package.json  pyproject.toml  setup.py
docs/: Makefile  conf.py  configuring.rst  installing.rst  make.bat
js/: _utilities.js  cookie-banner.js  highlight-navigation.js  mobile-toc.js  pytorch-anchors.js  scroll-to-anchor.js  side-menus.js  theme.js
scss/: _sphinx_base.scss  _sphinx_layout.scss
scss/shared/: _article.scss  _base_styles.scss  _footer.scss  _navigation.scss  _tables.scss  _variables.scss
shor_sphinx_theme/: __init__.py  breadcrumbs.html  cookie_banner.html  footer.html  layout.html  searchbox.html  theme.conf  theme_variables.jinja
shor_sphinx_theme/static/css/: theme.css
shor_sphinx_theme/static/js/: theme.js
